--- a/doc.html
+++ b/doc.html
@@ -19,9 +19,9 @@
     <h1 class="project-name">v2ray 使用说明</h1>
     <h2 class="project-tagline"></h2>
 
-    <a href="apps/win.zip" class="btn">下载win客户端</a>
-    <a href="apps/mac.dmg" class="btn">下载mac客户端</a>
-    <a href="apps/android.apk" class="btn">下载android客户端</a>
+    <a href="win.zip" class="btn">下载win客户端</a>
+    <a href="mac.dmg" class="btn">下载mac客户端</a>
+    <a href="android.apk" class="btn">下载android客户端</a>
 
   </header>
 
