--- a/doc.html
+++ b/doc.html
@@ -36,7 +36,8 @@
 
     <textarea id="input_config" style="width: 100%;resize: none;" rows="2" onclick="config_click()" readonly="" ></textarea> 
 
-    <p><span id="input_config_copied" style="color:red;display:none">已复制</span></p>
+    <div id="input_config_copied" style="color:red;padding-bottom: 10px;display:none">已复制</div>
+    
     <div id="qrcode"></div>
 
     <script>
